update citation latex entry

--- a/readme.rmd
+++ b/readme.rmd
@@ -17,7 +17,7 @@ Lv, W., Liu, F., Cai, K., Cao, Y., Deng, M., Liang, W., Yan, J., & Wang, G. (202
 A BibTeX entry for LaTeX users is:
 
 ``` bib
-@article{Lv_2024, 
+@article{lyu2024veg, 
 title={Distinguishing the Impacts and Gradient Effects of Climate Change and Human Activities on Vegetation Cover in the Weihe River Basin, China}, 
 volume={129}, 
 ISSN={2169-8961}, 
